# lorax

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix
benches/: benchmarks.rs
benches/sources/: arithmetic.lox  binary_trees.lox  closures.lox  equality.lox  fib.lox  instantiation.lox  invocation.lox  loops.lox  method_call.lox  mutual_recursion.lox  properties.lox  string_concat.lox  string_equality.lox  trees.lox  zoo.lox
examples/: assign.lox  benchmark.lox  closures.lox  control_flow.lox  debug.lox  precedence.lox  print.lox  returns.lox  variables.lox
lexer/: Cargo.toml
lexer/src/: lib.rs  scanner.rs  tokens.rs
report/: Cargo.toml
report/src/: error.rs  reporter.rs  span.rs
report/src/error/: lexing.rs  parsing.rs  runtime.rs
rlox/: Cargo.toml
rlox-compiler/: Cargo.toml
rlox-compiler/src/: chunk.rs  debug.rs  enconding.rs  lib.rs  main.rs  opcode.rs  value.rs  vm.rs
rlox-lexer/: Cargo.toml
rlox-lexer/src/: error.rs  scanner.rs  tokens.rs
rlox-report/: Cargo.toml
rlox-report/src/: lib.rs  reporter.rs  span.rs
rlox-report/src/error/: parsing.rs  pass.rs
rlox-tree-walk/: Cargo.toml
rlox-tree-walk/src/: error.rs  lib.rs  parsing.rs  passes.rs  runtime.rs
rlox-tree-walk/src/parsing/: expr.rs  parser.rs  visitor.rs
rlox-tree-walk/src/runtime/: callable.rs  control_flow.rs  environment.rs  interpreter.rs
rlox-vm/: Cargo.toml
rlox-vm/src/: chunk.rs  compiler.rs  debug.rs  enconding.rs  lib.rs  main.rs  opcode.rs  vm.rs
rlox/examples/: assign.lox  closures.lox  comparisons.lox  control_flow.lox  functions.lox  if.lox  precedence.lox  print.lox  recursion.lox  returns.lox  scopes.lox  variables.lox
rlox/src/: error.rs  interpreter.rs  lexer.rs  lexing.rs  lib.rs  main.rs  parser.rs  parsing.rs  report.rs  runtime.rs  scanner.rs  tokens.rs
rlox/src/interpreter/: environment.rs  error.rs
rlox/src/lexer/: tokens.rs
rlox/src/lexing/: error.rs  scanner.rs  tokens.rs
rlox/src/parser/: error.rs  expr.rs  object.rs  stmt.rs  visitor.rs
rlox/src/parsing/: ast.rs  error.rs  expr.rs  parser.rs  stmt.rs  visitor.rs
rlox/src/passes/: error.rs  resolver.rs
rlox/src/report/: reporter.rs  span.rs
rlox/src/runtime/: callable.rs  control_flow.rs  environment.rs  error.rs  interpreter.rs  object.rs
scripts/: samply-folded.ts
src/: error.rs  lib.rs  main.rs  test_utils.rs
tests/: tree_walk.rs  vm.rs
tests/sources/expressions/: evaluate.lox
tree-walk/: Cargo.toml
tree-walk/src/: lib.rs  passes.rs  runtime.rs
tree-walk/src/parsing/: expr.rs  (+2 more)
vm/: Cargo.toml
vm/src/: chunk.rs  compiler.rs  debug.rs  enconding.rs  gc.rs  lib.rs  main.rs  object.rs  opcode.rs  storage.rs  value.rs  vm.rs
vm/src/chunk/: serde.rs
vm/src/compiler/: context.rs  error.rs  scopes.rs
vm/src/object/: bound_method.rs  class.rs  closure.rs  function.rs  instance.rs  internal_str.rs  native.rs  pool.rs  string.rs  upvalue.rs
vm/src/vm/: error.rs  frame.rs  stack.rs
(+12 files in other folders)
