[workspace]
members = ["rlox-tree-walk", "rlox-vm", "rlox-lexer", "rlox-report"]
resolver = "3"

[package]
name = "rlox"
version = "0.1.0"
edition = "2024"

[dependencies]
rlox-report = { path = "rlox-report" }
rlox-tree-walk = { path = "rlox-tree-walk" }
rlox-vm = { path = "rlox-vm" }
thiserror = "2"
anyhow = "1"
