[workspace]
members = ["tree-walk", "vm", "lexer", "report"]
resolver = "3"

[package]
name = "rlox"
version = "0.1.0"
edition = "2024"

[dependencies]
report = { path = "report" }
tree-walk = { path = "tree-walk" }
vm = { path = "vm" }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
# `lexer` is only needed by the benchmark harness (it drives the compiler
# directly); `report` and `vm` come in as normal dependencies above.
lexer = { path = "lexer" }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
