[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[dependencies]
report = { path = "../report" }
lexer = { path = "../lexer" }
thiserror = "2"
anyhow = "1"
intrusive-collections = "0.10"
slice-dst = "1.5"
erasable = "1.3"
lasso = "0.7"
scopeguard = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rustc-hash = "2"
smallvec = "1.15"
